--- a/configs/Base.yaml
+++ b/configs/Base.yaml
@@ -10,13 +10,17 @@ MODEL:
   ROI_HEADS:
     NAME: GRiTROIHeadsAndTextDecoder
     IN_FEATURES: ["p3", "p4", "p5"]
-    IOU_THRESHOLDS: [0.6]
+    # IOU_THRESHOLDS: [0.6]
+    IOU_THRESHOLDS: [0.4]
     NUM_CLASSES: 1
-    SCORE_THRESH_TEST: 0.02
-    NMS_THRESH_TEST: 0.5
+    # SCORE_THRESH_TEST: 0.02
+    SCORE_THRESH_TEST: 0.01
+    # NMS_THRESH_TEST: 0.5
+    NMS_THRESH_TEST: 0.4
     OBJECT_FEAT_POOLER_RES: 14
   ROI_BOX_CASCADE_HEAD:
-    IOUS: [0.6, 0.7, 0.8]
+    # IOUS: [0.6, 0.7, 0.8]
+    IOUS: [0.4, 0.5, 0.6]
   ROI_BOX_HEAD:
     NAME: "FastRCNNConvFCHead"
     NUM_FC: 2
@@ -39,8 +43,10 @@ MODEL:
     POST_NMS_TOPK_TRAIN: 2000
     PRE_NMS_TOPK_TEST: 1000
     POST_NMS_TOPK_TEST: 256
-    NMS_TH_TRAIN: 0.9
-    NMS_TH_TEST: 0.9
+    # NMS_TH_TRAIN: 0.9
+    NMS_TH_TRAIN: 0.8
+    # NMS_TH_TEST: 0.9
+    NMS_TH_TEST: 0.7
     POS_WEIGHT: 0.5
     NEG_WEIGHT: 0.5
     IGNORE_HIGH_FP: 0.85
@@ -63,7 +69,8 @@ SOLVER:
   WARMUP_FACTOR: 0.001
   USE_CUSTOM_SOLVER: True
   OPTIMIZER: "ADAMW"
-  MAX_ITER: 180000
+  # MAX_ITER: 180000
+  MAX_ITER: 20000
   IMS_PER_BATCH: 64
   BASE_LR: 0.00008
   VIT_LAYER_DECAY: True
