--- a/configs/Base.yaml
+++ b/configs/Base.yaml
@@ -5,20 +5,30 @@ MODEL:
     NAME: "CenterNet"
   FPN:
     IN_FEATURES: ["layer3", "layer4", "layer5"]
+  # ori
   # PIXEL_MEAN: [123.675, 116.280, 103.530]
   # PIXEL_STD: [58.395, 57.12, 57.375]
-  PIXEL_MEAN: [118.122885, 118.38273, 118.685925]
-  PIXEL_STD: [64.66596, 68.38335000000001, 65.68137]
+  # all
+  # PIXEL_MEAN: [118.7734174607212, 118.46865449412077, 118.20989353041189]
+  # PIXEL_STD: [65.11846392289335, 67.70827140934027, 64.03109261141823]
+  # 30%
+  PIXEL_MEAN: [118.76794784200644, 118.4165025516651, 118.27603913463288]
+  PIXEL_STD: [64.91443271702711, 67.43264490984113, 63.795267966395734]
+
   ROI_HEADS:
     NAME: GRiTROIHeadsAndTextDecoder
     IN_FEATURES: ["p3", "p4", "p5"]
-    IOU_THRESHOLDS: [0.6]
+    # IOU_THRESHOLDS: [0.6]
+    IOU_THRESHOLDS: [0.4]
     NUM_CLASSES: 1
-    SCORE_THRESH_TEST: 0.02
-    NMS_THRESH_TEST: 0.5
+    # SCORE_THRESH_TEST: 0.02
+    SCORE_THRESH_TEST: 0.01
+    # NMS_THRESH_TEST: 0.5
+    NMS_THRESH_TEST: 0.4
     OBJECT_FEAT_POOLER_RES: 14
   ROI_BOX_CASCADE_HEAD:
-    IOUS: [0.6, 0.7, 0.8]
+    # IOUS: [0.6, 0.7, 0.8]
+    IOUS: [0.4, 0.5, 0.6]
   ROI_BOX_HEAD:
     NAME: "FastRCNNConvFCHead"
     NUM_FC: 2
@@ -41,8 +51,10 @@ MODEL:
     POST_NMS_TOPK_TRAIN: 2000
     PRE_NMS_TOPK_TEST: 1000
     POST_NMS_TOPK_TEST: 256
-    NMS_TH_TRAIN: 0.9
-    NMS_TH_TEST: 0.9
+    # NMS_TH_TRAIN: 0.9
+    NMS_TH_TRAIN: 0.8
+    # NMS_TH_TEST: 0.9
+    NMS_TH_TEST: 0.7
     POS_WEIGHT: 0.5
     NEG_WEIGHT: 0.5
     IGNORE_HIGH_FP: 0.85
@@ -66,7 +78,7 @@ SOLVER:
   USE_CUSTOM_SOLVER: True
   OPTIMIZER: "ADAMW"
   # MAX_ITER: 180000
-  MAX_ITER: 20000
+  MAX_ITER: 30000
   IMS_PER_BATCH: 64
   BASE_LR: 0.00008
   VIT_LAYER_DECAY: True
